small UI improvments with Božo

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <div class="section">
         <h3>Important Information</h3>
         <ul>
+            <li>Give the doorbell a friendly ring! 🔔 </li>
             <li>
-                Always ring the bell first 🔔 if no one answers then you can use the key box 🔑 ask for the password in the group
+                If no one answers then you can use the key box 🔑
                 <br>
                 <button id="youtubeBtn" class="action-button" onclick="window.open('https://youtu.be/nGrdOKK1NDI', '_blank')">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
@@ -24,6 +25,8 @@
                     </svg>
                     Key box guide
                 </button>
+                <br>
+                (ask for the password in the group)
             </li>
             <li>
                 Check first here if there is enough room and then add your name 🖊️📜
@@ -92,8 +95,12 @@
     <div class="section">
         <h3>🛌 Bedding</h3>
         <ul>
-        <li>Take fresh sheets from the shelf when you arrive. Use the same for the entirety of your stay and put them into the blue "dirty bag" when you leave, regardless of when you leave. If you are leaving early in the morning make sure your best buddy takes care of this for you.</li>
+        <li>Take fresh sheets from the shelf when you arrive.</li>
+        <li>Use the same for the entirety of your stay.</li>
+        <li>When you're done with them, put them into the blue "dirty bag" - regardless of when you leave.</li>
+        <li>If you are leaving early in the morning make sure your best buddy takes care of this for you.</li>
         <li>Do not use a mattress/pillow/blanket/duvet without a sheet/case/cover!</li>
+        <br>
         <button class="video-btn youtube-btn" onclick="window.open('https://youtu.be/OLnks5gnjsI', '_blank')">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
                 <path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/>
@@ -107,10 +114,10 @@
         <h3>🤼 Shared Responsibilities</h3>
         <p>We expect everyone to contribute to household tasks, which include:</p>
         <ul>
-            <li>Using the dishwasher, tidying up the clean things inside and refilling it with used items</li>
-            <li>Cleaning the kitchen and bathroom, using the vacuum cleaner in all areas</li>
+            <li>Using the dishwasher, tidying up the clean things inside and refilling it with used items.</li>
+            <li>Cleaning the kitchen and bathroom, using the vacuum cleaner in all areas.</li>
             <li>
-                Doing laundry (washing, drying, folding) 
+                Doing laundry (washing, drying, folding):
                 <br>
                 <button class="video-btn youtube-btn" onclick="window.open('https://youtu.be/A5p3nI89Lwg', '_blank')">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
@@ -120,7 +127,7 @@
                 </button>
             </li>
             <li>
-                Bringing out the trash 
+                Bringing out the trash:
                 <br>
                 <button class="video-btn youtube-btn" onclick="window.open('https://www.youtube.com/watch?v=lHqucqu2jQU', '_blank')">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
@@ -137,6 +144,7 @@
         <ul>
             <li>Please take your towels with you to the room and do not leave them in the bathroom to dry!</li>
             <li>It would be amazing if you clean any hair from the shower after every single time, even if it's not your hair.</li>
+            <br>
             <button class="video-btn youtube-btn" onclick="window.open('https://youtu.be/zVhJLWfPMYI', '_blank')">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
                     <path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/>
@@ -148,13 +156,17 @@
     
     <div class="section">
         <h3>💼 Luggage Storage </h3>
-        <p>Please always bring your luggage to the basement and only keep your daily needed items in the shared room.</p>
-        <button class="video-btn youtube-btn" onclick="window.open('https://youtube.com/shorts/c4OPtn0qek0', '_blank')">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
-                <path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/>
-            </svg>
-            Basement guide
-        </button>
+        <ul>
+            <li>Please always bring your luggage to the basement.</li>
+            <li>Only keep your daily needed items in the shared room.</li>
+            <br>
+            <button class="video-btn youtube-btn" onclick="window.open('https://youtube.com/shorts/c4OPtn0qek0', '_blank')">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
+                    <path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/>
+                </svg>
+                Basement guide
+            </button>
+        </ul>
     </div>
     
     <div class="section">
