--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </svg>
                     Copy address
                 </button>
-                <button id="mapBtn" class="action-button" onclick="window.open('https://maps.app.goo.gl/eVrWCakUFpHGw2ZB7', '_blank')">
+                <button id="mapBtn" class="action-button" onclick="window.open('https://maps.app.goo.gl/efjAy3wo7BckfrNX9', '_blank')">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
                         <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
                     </svg>
