change title of page, delete comment and switch to the address instead of the google business

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Community</title>
+    <title>Staying in Bern</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌹</text></svg>">
 </head>
@@ -57,7 +57,7 @@
                     </svg>
                     Copy address
                 </button>
-                <button id="mapBtn" class="action-button" onclick="window.open('https://maps.app.goo.gl/efjAy3wo7BckfrNX9', '_blank')">
+                <button id="mapBtn" class="action-button" onclick="window.open('https://maps.app.goo.gl/DmxTnZ68WiQ3QeWY7', '_blank')">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
                         <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
                     </svg>
@@ -217,8 +217,6 @@
         </ul>
         <p>Any question is welcome, especially about staying here. Don't hesitate to reach out! 🙂</p>
     </div>
-
-    <!-- Rest of the HTML content remains the same -->
 
     <script>
         document.getElementById('copyAddressBtn').addEventListener('click', function() {
