removing the old place videos

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="section">
         <h3>Important Information</h3>
         <ul>
-            <li>Give the doorbell a friendly ring! 🔔 </li>
+            <!-- <li>Give the doorbell a friendly ring! 🔔 </li>
             <li>
                 If no one answers then you can use the key box 🔑
                 <br>
@@ -87,7 +87,7 @@
                 </button>
                 <br>
                 (ask for the password in the group)
-            </li>
+            </li> -->
             <li>
                 Check first here if there is enough room and then add your name 🖊️📜
                 <br>
