first version of adding the welcome center

--- a/index.html
+++ b/index.html
@@ -139,7 +139,14 @@
         <h3>Important Information</h3>
         <ul>
             <li>
-                <strong>Coordinate your arrival:</strong> Please message the group before coming to ensure someone is available to open the door. There might be situations where no one is present to let you in.
+                <strong>Coordinate your arrival:</strong> Make sure you confirm that someone will be there when you arrive, you can do that in the welcome center WhatsApp group. If no one answers, wait patiently or try to grab their attention.
+                <br>
+                <button id="welcomeBtn" class="action-button" onclick="window.open('http://tiny.cc/welcome-chat', '_blank')" style="background-color: #e74c3c;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
+                        <path d="M20 2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h4l4 4 4-4h4c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-2 12H6v-2h12v2zm0-3H6V9h12v2zm0-3H6V6h12v2z"/>
+                    </svg>
+                    Welcome Center Group
+                </button>
             </li>
             <li>
                 Check first here if there is enough room and then add your name 🖊️📜
