no need to check the sleeping plan

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </button>
             </li>
             <li>
-                Check first here if there is enough room and then add your name 🖊️📜
+                There is nearly always enough space but it would be nice if you add your name so we can make sure we are not overcrowded 🖊️📜
                 <br>
                 <button id="sheetBtn" class="action-button" onclick="window.open('https://tiny.cc/sleepingplan', '_blank')">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
